[project]
name = "reddit-mcp-dark"
version = "0.1.2"
description = "Reddit MCP Server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Barker"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "praw"
]

[tool.setuptools.packages.find]
where = ["src"]
